Fixes modal overflow issues due to mobile safari

--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -2,8 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100dvw;
+  height: 100dvh;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 20;
 }
@@ -15,14 +15,17 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   padding: 20px 20px 32px 20px;
   overflow: hidden;
-  overflow-y: scroll;
-  max-height: calc(100vh - 60px);
-  width: 100vw;
+  overflow-y: auto;
+  max-height: calc(100dvh - 80px);
+  width: 100dvw;
   top: 60px;
   z-index: 20;
+  padding-bottom: calc(32px + env(safe-area-inset-bottom));
+  margin-bottom: env(safe-area-inset-bottom);
 
   @media (min-width: 640px) {
     padding: 20px;
+    margin-bottom: 0;
   }
 }
 
